Laget eget request object for periode id requester
